# asana-exporter

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
asana-to-jira/: client.py
asana_exporter/: client.py  utils.py
asana_to_jira/: client.py
scripts/: asana-exporter
snap/: snapcraft.yaml
tools/jira_importer/: client.py
