[build-system]
requires = ["setuptools", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

# Used if no untracked files and current commit is tagged.
template = "{tag}"

# Used if there are no untracked files, and current commit is not tagged.
dev_template = "{tag}.post{ccount}"

# Used if untracked files exist or uncommitted changes have been made.
dirty_template = "{tag}.post{ccount}+dirty"

[project]
name = "asana-exporter"
description = "Python tool to extract data from Asana."
readme="README.md"
requires-python = ">=3.8"
dynamic = ["version"]
dependencies = [
    'importlib-metadata; python_version >= "3.8"',
    'asana',
    'jira',
    'simplejson',
]

[project.scripts]
asana-exporter = "asana_exporter.cli:main"
